# advent-of-fpga-2025

./: .gitignore  README.md  advent_of_fpga.opam  dune-project
day01/: dune  hardware.ml  hw_puzzle1.ml  hw_puzzle2.ml  puzzle1.ml  puzzle2.ml  safe_dial.ml  sim.ml  solver.ml  test_day01.ml
lib/: common.ml  dune
test/: dune
