(library
 (name day01)
 (public_name advent_of_fpga.day01)
 (modules safe_dial solver hardware)
 (libraries hardcaml common)
)

(executable
 (name puzzle1)
 (public_name advent_of_fpga.day01_puzzle1)
 (modules puzzle1)
 (libraries day01)
)

(executable
 (name puzzle2)
 (public_name advent_of_fpga.day01_puzzle2)
 (modules puzzle2)
 (libraries day01)
)
