(library
 (name day01)
 (public_name advent_of_fpga.day01)
 (modules safe_dial solver)
 (libraries hardcaml common)
 (preprocess (pps hardcaml.ppx_hardcaml0))
)

(executable
 (name puzzle1)
 (public_name advent_of_fpga.day01_puzzle1)
 (modules puzzle1)
 (libraries day01)
)

(executable
 (name puzzle2)
 (public_name advent_of_fpga.day01_puzzle2)
 (modules puzzle2)
 (libraries day01)
)

(executable
 (name sim)
 (public_name advent_of_fpga.day01_sim)
 (modules sim)
 (libraries day01 hardcaml))

(executable
 (name hw_puzzle1)
 (public_name advent_of_fpga.day01_hw_puzzle1)
 (modules hw_puzzle1)
 (libraries day01 hardcaml))

(executable
 (name hw_puzzle2)
 (public_name advent_of_fpga.day01_hw_puzzle2)
 (modules hw_puzzle2)
 (libraries day01 hardcaml))

(test
 (name test_day01)
 (modules test_day01)
 (libraries day01 hardcaml))
